Atualização da Semana

--- a/pacotes/notacao.sty
+++ b/pacotes/notacao.sty
@@ -38,6 +38,7 @@
 \newcommand{\complexos}{\mathbb{C}}
 \newcommand{\imaginarios}{\mathbb{I}}
 \DeclareMathOperator{\sen}{sen}
+\DeclareMathOperator{\senh}{senh}
 \DeclareMathOperator{\sign}{sign}
 \DeclareMathOperator{\tg}{tg}
 \DeclareMathOperator{\cotg}{cotg}
